chore: fix compatibility issue
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>